Replace Paths.get() with Paths.of() and remove path-related code smell